--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,30 +1,32 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: flask-app-deployment
+  name: flask-hello-world
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
-      app: flask-app
+      app: flask-hello-world
   template:
     metadata:
       labels:
-        app: flask-app
+        app: flask-hello-world
     spec:
       containers:
-      - name: flask-app
-        image: flask-hello-world-kind-local:latest
+      - name: flask-container
+        image: iolcloud/flask-hello-world:latest
         ports:
         - containerPort: 5000
+
 ---
+
 apiVersion: v1
 kind: Service
 metadata:
-  name: flask-app-service
+  name: simple-flask-service
 spec:
   selector:
-    app: flask-app
+    app: flask-hello-world
   ports:
   - protocol: TCP
     port: 80
